2011-05-14  Christopher Roy Bratusek <nano@tuxfamily.org>
	* src/frames.c
	* src/sawfish_subrs.h
	* lisp/sawfish/wm/frames.jl: use frame-font for titlebars, rather than
	default-font (now changing titlebar-font leaves message-font intact

2011-05-13  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/frames.jl: add possibility to also change the
	font-color for highlighted and clicked frames regardless of theme

	* lisp/sawfish/wm/frames.jl: fixed changing font-color for horizontal
	tabbars (vertical don't show text (yet))

	* themes/StyleTab/theme.jl: remove custom color-changing option

2011-05-05  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/commands/jump-or-exec.jl: reverted 2 commits

	* lisp/sawfish/wm/windows.jl: more robustness for get-window-by
	-name, -class, -role

	* **/Makefile.in: remove VPATH to appease makepp [Daniel Pfeiffer]

2011-04-26  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/autoload.jl: removed maybe-raise-tab
	from autoload, aswell as viewport-linear stuff

2011-04-16  Christopher Roy Bratusek <nano@tuxfamily.org>
	* configure.in: bump minimum rep to 0.92.0

2011-04-15  Christopher Roy Bratusek <nano@tuxfamily.org>
	* sawfish.desktop
	* sawfish-wm.desktop
	* sawfish-ksm.desktop: unified order
	                       spec compliance
			       -- Kim B. Heino

2011-04-14  Christopher Roy Bratusek <nano@tuxfamily.org>
	* configure.in
	* Makefile.in
	* sounds/Makefile.in
	* themes/Makefile.in: remove version from install-paths

	* debian/**: merged more stuff from Ian Zimmermann

2011-04-13  Christopher Roy Bratusek <nano@tuxfamily.org>
	* Makefile.in: added debclean rule
	               improved distclean rule
		       improved gitclean rule

	* config.h.in: removed from GIT

	* config.guess
	* config.sub: added

	* Makedefs.in
	* Makefile.in
	* build-info
	* sawfish.pc.in
	* configure.in: removed architecture from install-paths

	* sounds/Makefile.in