@@ -1,8 +1,15 @@
 2011-05-14  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* src/frames.c
 	* src/sawfish_subrs.h
+	* lisp/sawfish/wm/gaol.jl
 	* lisp/sawfish/wm/frames.jl: use frame-font for titlebars, rather than
-	default-font (now changing titlebar-font leaves message-font intact
+	default-font (now changing titlebar-font leaves message-font intact)
+
+	* themes/mxflat/theme.jl
+	* themes/get-S-tabbed/theme.jl
+	* themes/Crux/theme.jl
+	* themes/StyleTab/theme.jl: updated to use frame-font instead of
+	default-font. Remove custom-font-setting option from StyleTab
 
 2011-05-13  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/frames.jl: add possibility to also change the
